<resources>
    <string name="app_name">PropertyApp</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="login">Login</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="select_date">Select Date</string>
    <string name="phone_number">phone number</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Already have account</string>
    <string name="logout_txt">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="userName">UserName</string>
    <string name="usernametext">userNameText</string>
    <string name="email">email</string>
    <string name="allusers">AllUsers</string>
    <string name="addproperty">AddProperty</string>
    <string name="delete_property">Delete Property</string>
    <string name="city">Enter city</string>
    <string name="address">Enter Address</string>
    <string name="size">Enter Size</string>
    <string name="property_name">Property Name</string>
    <string name="kitchen">Number of kitchen</string>
    <string name="washrooms">WashRooms</string>
    <string name="furnished_non_furnished">Furnished/non furnished</string>
    <string name="sale_rent">Sale/Rent</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="floors">Floors</string>
    <string name="rooms">Rooms</string>
    <string name="editBtnTxt">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="_3_marla">3 merla</string>
    <string name="_5_marla">5 merla</string>
    <string name="_10_marla">10 merla</string>
    <string name="ok">OK</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="filters">Filters</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="user_image">User Image</string>
    <string name="all_properties">All Properties</string>
</resources>